--- a/Steck html and Css/index1.html
+++ b/Steck html and Css/index1.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Стажировки в IT</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -53,34 +53,34 @@
           <tbody>
             <tr>
               <th>Формат работы</th>
-              <td colspan="2">Очно или Дистанционно</td>
-              <td>Очно</td>
+              <td colspan="2">✔ Очно или Дистанционно</td>
+              <td>✔ Очно</td>
             </tr>
             <tr>
               <th>Дата начала</th>
-              <td>Каждый месяц</td>
-              <td>Май</td>
-              <td>Февраль, Август</td>
+              <td>✔ Каждый месяц</td>
+              <td>✔ Май</td>
+              <td>✔ Февраль, Август</td>
             </tr>
             <tr>
               <th>Оплата проезда</th>
-              <td colspan="3">Да</td>
+              <td colspan="3">✔ Да</td>
             </tr>
             <tr>
               <th>Оплата проживания</th>
-              <td>Нет</td>
-              <td colspan="2">Да</td>
+              <td>✕ Нет</td>
+              <td colspan="2">✔ Да</td>
             </tr>
             <tr>
               <th>Занятость</th>
-              <td colspan="2">Гибкий график от 20 до 40 часов в неделю</td>
-              <td>Полная 5/2</td>
+              <td colspan="2">✔ Гибкий график от 20 до 40 часов в неделю</td>
+              <td>✔ Полная 5/2</td>
             </tr>
             <tr>
               <th>Продолжительность</th>
-              <td>от 3 до 6 меясцев</td>
-              <td>3 месяца</td>
-              <td>1 месяц</td>
+              <td>✔ от 3 до 6 меясцев</td>
+              <td>✔ 3 месяца</td>
+              <td>✔ 1 месяц</td>
             </tr>
           </tbody>
           <tfoot>
@@ -94,7 +94,7 @@
         <h2>Требования</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi <strong>iure repellendus harum laborum facilis</strong> fuga totam recusandae, eaque iste voluptas error libero quam vitae eligendi perspiciatis fugit veniam distinctio velit sed qui nobis adipisci unde. Quae tempora magni <a href="">architecto</a> possimus deserunt dolorum, voluptatum veniam iure impedit sed cupiditate, sit repellendus ipsum placeat magnam quibusdam, perferendis iusto natus facere fugit. Ipsam tempore aliquid inventore officiis quia, similique, consequatur harum explicabo, commodi laborum dolores est dignissimos quasi assumenda rem? Delectus at voluptatum voluptatem nemo officia labore. Eius officiis sunt quod! Quisquam dolorum, fuga <em>quidem magni voluptatem praesentium</em> necessitatibus quod numquam repudiandae?</p>
       </section>
-      <section id="form" class="form zayavka">
+      <section id="form" class="form">
         <h2>Подать заявку</h2>
         <form action="" method="get">
   
@@ -112,7 +112,10 @@
             <option value="">--Выберите направление--</option>
             <option value="Frontend">Frontend</option>
             <option value="Backend">Backend</option>
+            <option value="Мобильная разработка">Мобильная разработка</option>
             <option value="DevOps">DevOps</option>
+            <option value="Анализ данных">Анализ данных</option>
+            <option value="Машинное обучение">Машинное обучение</option>
           </select>
     
           <label for="name">Имя</label>
