--- a/Steck html and Css/index.html
+++ b/Steck html and Css/index.html
@@ -25,12 +25,14 @@
       </div>
     </div>
   </header>
+
   <main>
     <div class="container">
-      <section class="hero">
+      <section class="logic-block hero">
         <h1>Стажировка в одной из лучших IT-компаний России</h1>
       </section>
-      <section id="vac" class="vacant">
+
+      <section id="vac" class="logic-block vacant">
         <h2>Вакансии</h2>
         <ul>
           <li>Frontend</li>
@@ -41,7 +43,8 @@
           <li>Машинное обучение</li>
         </ul>
       </section>
-      <section id="cond" class="cond">
+
+      <section id="cond" class="logic-block cond">
         <h2>Условия</h2>
         <table>
           <thead>
@@ -90,11 +93,13 @@
           </tfoot>
         </table>
       </section>
-      <section id="req" class="req">
+
+      <section id="req" class="logic-block req">
         <h2>Требования</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi <strong>iure repellendus harum laborum facilis</strong> fuga totam recusandae, eaque iste voluptas error libero quam vitae eligendi perspiciatis fugit veniam distinctio velit sed qui nobis adipisci unde. Quae tempora magni <a href="">architecto</a> possimus deserunt dolorum, voluptatum veniam iure impedit sed cupiditate, sit repellendus ipsum placeat magnam quibusdam, perferendis iusto natus facere fugit. Ipsam tempore aliquid inventore officiis quia, similique, consequatur harum explicabo, commodi laborum dolores est dignissimos quasi assumenda rem? Delectus at voluptatum voluptatem nemo officia labore. Eius officiis sunt quod! Quisquam dolorum, fuga <em>quidem magni voluptatem praesentium</em> necessitatibus quod numquam repudiandae?</p>
       </section>
-      <section id="form" class="form zayavka">
+
+      <section id="form" class="logic-block form zayavka">
         <h2>Подать заявку</h2>
         <form action="" method="get">
   
@@ -153,9 +158,13 @@
           <button type="submit">Отправить</button>
     
         </form>
+
+
       </section>
+
     </div>
   </main>
+
   <footer>
     <div class="container row">
       <div class="logo">
