--- a/Steck html and Css/index.html
+++ b/Steck html and Css/index.html
@@ -6,9 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Стажировки в IT</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
-  <header>
+  <!-- <header>
     <div class="container row">
       <div class="logo">
         Стажировки в <strong>IT</strong>
@@ -24,12 +30,18 @@
         <a href="#form">Подать заявку</a>
       </div>
     </div>
-  </header>
+  </header> -->
 
   <main>
     <div class="container">
       <section class="logic-block hero">
-        <h1>Стажировка в одной из лучших IT-компаний России</h1>
+        <h1 class="main_titel">Стажировка в одной из лучших <strong>IT-компаний</strong> России</h1>
+        <figure>
+          <img src="assets/images/vzvafm530urzqh5m3rajp01lzxgq5338.png" alt="мужчина с ноутбуком">
+          <figcaption>
+            Взято в <a href="https://yandex.ru/images/search?cbir_id=13288031%2Ft6s2j6fqgpsoDW71V7j_7Q2443&cbir_page=similar&crop=0%3B0.0662%3B1%3B1&img_url=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F0d%2F34%2Fef%2F0d34efdbfa8f54bb83fa2142c33aff20.png&lr=20183&pos=1&rpt=imageview&url=https%3A%2F%2Favatars.mds.yandex.net%2Fget-images-cbir%2F13288031%2Ft6s2j6fqgpsoDW71V7j_7Q2443%2Forig">открытом доступе</a> 
+          </figcaption>
+        </figure>
       </section>
 
       <section id="vac" class="logic-block vacant">
@@ -46,7 +58,7 @@
 
       <section id="cond" class="logic-block cond">
         <h2>Условия</h2>
-        <table>
+        <table class="big_table">
           <thead>
             <th></th>
             <th>Стажировка в течение года</th>
@@ -165,13 +177,13 @@
     </div>
   </main>
 
-  <footer>
+  <!-- <footer>
     <div class="container row">
       <div class="logo">
         Стажировки в <strong>IT</strong>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi aliquid totam excepturi placeat. Mollitia, amet odit error exercitationem ullam quisquam, voluptatem quis laboriosam quia dolores pariatur, dignissimos totam id eius!</p>
     </div>
-  </footer>
+  </footer> -->
 </body>
 </html>
