--- a/Steck html and Css/index.html
+++ b/Steck html and Css/index.html
@@ -14,29 +14,31 @@
 
 </head>
 <body>
-  <!-- <header>
+  <header>
     <div class="container row">
       <div class="logo">
         Стажировки в <strong>IT</strong>
       </div>
       <nav>
-        <ul>
+        <ul class="nav_list">
           <li><a href="#vac">Вакансии</a></li>
           <li><a href="#cond">Условия</a></li>
           <li><a href="#req">Требования</a></li>
+          
         </ul>
       </nav>
       <div class="header-button">
         <a href="#form">Подать заявку</a>
       </div>
     </div>
-  </header> -->
+   
+  </header>
 
   <main>
     <div class="container">
       <section class="logic-block hero">
         <h1 class="main_titel">Стажировка в одной из лучших <strong>IT-компаний</strong> России</h1>
-        <figure>
+        <figure id="hero_figure">
           <img src="assets/images/vzvafm530urzqh5m3rajp01lzxgq5338.png" alt="мужчина с ноутбуком">
           <figcaption>
             Взято в <a href="https://yandex.ru/images/search?cbir_id=13288031%2Ft6s2j6fqgpsoDW71V7j_7Q2443&cbir_page=similar&crop=0%3B0.0662%3B1%3B1&img_url=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F0d%2F34%2Fef%2F0d34efdbfa8f54bb83fa2142c33aff20.png&lr=20183&pos=1&rpt=imageview&url=https%3A%2F%2Favatars.mds.yandex.net%2Fget-images-cbir%2F13288031%2Ft6s2j6fqgpsoDW71V7j_7Q2443%2Forig">открытом доступе</a> 
@@ -46,8 +48,14 @@
 
       <section id="vac" class="logic-block vacant">
         <h2>Вакансии</h2>
-        <ul>
-          <li>Frontend</li>
+        <ul class="vac_list">
+          <li>Фронтенд</li>
+          <li>Backend</li>
+          <li id="ferst">Мобильная разработка</li>
+          <li>DevOps</li>
+          <li>Анализ данных</li>
+          <li>Машинное обучение</li>
+          <li>ронтенд</li>
           <li>Backend</li>
           <li>Мобильная разработка</li>
           <li>DevOps</li>
@@ -60,14 +68,14 @@
         <h2>Условия</h2>
         <table class="big_table">
           <thead>
-            <th></th>
+            <th class="pusto"> </th>
             <th>Стажировка в течение года</th>
             <th>Стажировка летняя</th>
             <th>Погружение: интенсивная стажировка</th>
           </thead>
           <tbody>
             <tr>
-              <th>Формат работы</th>
+              <th >Формат работы</th>
               <td colspan="2">Очно или Дистанционно</td>
               <td>Очно</td>
             </tr>
@@ -177,13 +185,14 @@
     </div>
   </main>
 
-  <!-- <footer>
+  <footer>
     <div class="container row">
       <div class="logo">
         Стажировки в <strong>IT</strong>
       </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi aliquid totam excepturi placeat. Mollitia, amet odit error exercitationem ullam quisquam, voluptatem quis laboriosam quia dolores pariatur, dignissimos totam id eius!</p>
+      <div class="footer_text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem magnam necessitatibus, odio aut sint corrupti molestiae excepturi veniam beatae dolorem consequatur ipsa, voluptas est ipsam quo deserunt laborum asperiores ex quasi amet iure maiores incidunt expedita! Fugiat adipisci, cum cumque aperiam nesciunt repudiandae possimus delectus distinctio quos optio, quod quia!</p></div>
     </div>
-  </footer> -->
+  </footer>
 </body>
 </html>
