--- a/Steck html and Css/index.html
+++ b/Steck html and Css/index.html
@@ -45,10 +45,18 @@
                     <span class="button"><a href="/" class="button">Перейти к вариантам</a></span>  
                 </div>
                 <img class="hero_img" src="assets/images/pc.png" alt="">
-                
             </div>
         </section>
 
+        <section class="etaps">
+            <div class="logo_etaps">
+                <span class="slogan"><strong class="slogan">FILI PC</strong> сопроводит вас на всех этапах покупки</span> 
+                <span class="slogan_opisanie">
+                Мы не просто продаём кастомные компьютеры высокого качества из премиальных комплектующих, но и сопровождаем клиента от этапа выбора комплектации до послегарантийного обслуживания.
+                </span>
+            </div>
+
+        </section>
             
     </main>
 
