--- a/Steck html and Css/index.html
+++ b/Steck html and Css/index.html
@@ -39,7 +39,7 @@
     <main> 
 
         <section class="test_flex">
-                
+                 <img class="test_bg" src="assets/images/hero_bg2.png" alt="PC">
                 <div class="test_titel">
                     <h1 class="test_h1_titel">Купите компьютер вашей мечты</h1>
 
